--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.11",
+        "pdfkit": "^0.17.2",
+        "qrcode": "^1.5.4",
         "razorpay": "^2.9.6",
         "sharp": "^0.34.5",
         "uuid": "^11.0.3"
